--- a/index.html
+++ b/index.html
@@ -5,8 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Combo&family=Dangrek&family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="container">
+
+        <main>
+            <h1>Tic Tac Toe</h1>
+            <div class="gameboard-container">
+                <div class="cell">1</div>
+                <div class="cell">2</div>
+                <div class="cell">3</div>
+                <div class="cell">4</div>
+                <div class="cell">5</div>
+                <div class="cell">6</div>
+                <div class="cell">7</div>
+                <div class="cell">8</div>
+                <div class="cell">9</div>
+            </div>
+            <div class="winning-msg"></div>
+            <button type="reset">Restart</button>
+        </main>
     
-</body>
+        <footer>
+            <h2>Follow Us</h2>
+            <ul>
+                <a href="#" target="_blank"><img src="img/fb.icon.png" alt="FB Icon"></a>
+                <a href="#" target="_blank"><img src="img/ig.icon.png" alt="IG Icon"></a>
+                <a href="#" target="_blank"><img src="img/twitter.icon.png" alt="Twitter Icon"></a>
+            </ul>
+        </footer>
+    </div>
+    <script src="script.js"></script>
+</body> 
 </html>
