Accidentally done it, still need to tidy up

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
         <main>
             <h1>Tic Tac Toe</h1>
+            <p class="displayCurrentPlayer">player X Starts First</p>
             <div class="gameboard-container">
                 <div class="cell"></div>
                 <div class="cell"></div>
@@ -30,7 +31,7 @@
             <!-- Displaying winning msg section -->
             <div class="result-msg">
             </div>
-            <button type="reset">Restart</button>
+            <button type="button" class="restart">Restart</button>
         </main>
     
         <footer>
