Added muted and unmuted function

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <div class="container">
         <main>
+            <div class="soundOn"><img src="img/sound.png" alt="Sound On"></div>
             <h1>Tic Tac Toe</h1>
             <table>
                 <thead>
