--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <!-- Displaying winning msg & play-again button section -->
             <div class="result-msg"></div>
             <!-- Restart button section -->
-            <button type="button" class="restart">Restart</button>
+            <button type="button" class="restart">Reset</button>
         </main>
         <section></section>
         <footer>
